add url via API
